# simple-yt-dlp

./: .gitignore  CMakeLists.txt
cmake/: AddDependencies.cmake  AddPybind.cmake  AddQmlModules.cmake
qml/: CMakeLists.txt  Main.qml
src/: CMakeLists.txt  Main.qml  main.cpp  testpy.cpp  testpy.h
src/YtDlp/: CMakeLists.txt  executable_controller.cpp  executable_controller.h  executable_worker.cpp  executable_worker.h  notifications.cpp  notifications.h  yt_dlp.cpp  yt_dlp.h
